--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -14,7 +14,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <title>Computational NeuroImaging Lab</title>
+    <title>Center for Biomedical Imaging and Neuromodulation</title>
   </head>
 
   <body>
@@ -23,9 +23,8 @@
 
         <header>
           <center>
-          <h1>Computational Neuroimaging Laboratory</h1>
+          <h1>Center for Biomedical Imaging and Neuromodulation</h1>
           <h2><a href="http://www.rfmh.org/nki/" target="_blank">Nathan S. Kline Institute for Psychiatric Research</a></h2>
-          <h2><a href="http://www.childmind.org" target="_blank">Child Mind Institute</a></h2>
           <!--<h2>{{page.title}}</h2>-->
         </header>
 
@@ -47,7 +46,7 @@
 
         <footer>
             <center>
-            <a href="http://www.rfmh.org"><img src="images/nki_logo.jpg" height = "84"></a><a href="http://www.childmind.org"><img src="images/cmi_logo.jpg" height="84"></a>
+            <a href="http://www.rfmh.org"><img src="images/nki_logo.jpg" height = "84"></a>
         </center>
               <center>Research in the Computational Neuroimaging Laboratory is financially supported by the <a href="http://www.nimh.nih.gov/index.shtml">National Istitute for Mental Health</a>, the <a href="https://bbrfoundation.org">Brain & Behaviour Research Foundation</a> (previous), the <a href="http://www.childmind.org">Child Mind Institute</a>, the <a href="http://www.omh.ny.gov/">New York State Office of Mental Health</a>, the <a href="http://corporate.rfmh.org">Research Foundation for Mental Hygiene, Inc.</a>, and the <a href="http://www.rfmh.org">Nathan S. Kline Institute for Psychiatric Research</a>.</center>
         </footer>
